--- a/procGen.html
+++ b/procGen.html
@@ -13,13 +13,15 @@
 		/*width: 100%;*/
 		/*height: 100%;*/
 	}
-	#landscape{
+	#skyLayer{
 		background: linear-gradient(skyblue, white);
 	}
 </style>
 </head>
 <body>
-	<canvas id="landscape" width="1000"></canvas>
+	<canvas id="skyLayer" width="1000" height="200" style="position: absolute; z-index:0;"></canvas>
+	<canvas id="waterLayer" width="1000" height="200" style="position: absolute; z-index:1;"></canvas>
+	<canvas id="landscape" width="1000" height="200" style="position: absolute; z-index:2"></canvas>
 	<div>
 		<label for="intensity">Randomness</label>
 		<input type="range" min="10" max="99" id="randomness" oninput="updateSliderNum(value)" value="99"></input>
@@ -39,9 +41,11 @@
 	var numOfIterations = 10;
 	var randomness = document.getElementById('randomness').value;
 	var intensity = document.getElementById('intensity').value;
-	console.log(intensity);
-	const X_LENGTH = 99; //randomness
-	const Y_LENGTH = 99; //intensity
+
+	const X_LENGTH = 100; //randomness
+	const Y_LENGTH = 200; //intensity
+
+	const WATER_LEVEL = 140;
 
 	var terrain = new Array();
 
@@ -51,6 +55,7 @@
 		addChunk();
 	}
 
+	drawWater();
 	draw();
 
 	function addChunk(){
@@ -87,14 +92,16 @@
 		xIncrement = landscape.width / (terrain.length-1);
 		for(var x=0; x<=terrain.length; x++){
 
-			ctx.beginPath();
-			ctx.moveTo(x, terrain[x]);
-			ctx.lineTo(x, terrain[x]+2);
-			ctx.strokeStyle="forestgreen";
-			ctx.stroke();
+			if(terrain[x] < WATER_LEVEL){
+				ctx.beginPath();
+				ctx.moveTo(x, terrain[x]-5);
+				ctx.lineTo(x, terrain[x]+0);
+				ctx.strokeStyle="forestgreen";
+				ctx.stroke();
+			}
 
 			ctx.beginPath();
-			ctx.moveTo(x, terrain[x]+2);
+			ctx.moveTo(x, terrain[x]+0);
 			ctx.lineTo(x, terrain[x]+20);
 			ctx.strokeStyle="brown";
 			ctx.stroke();
@@ -105,6 +112,16 @@
 			ctx.strokeStyle="grey";
 			ctx.stroke();
 		}
+	}
+
+	function drawWater(){
+		var landscape = document.getElementById('landscape');
+		var ctx = landscape.getContext("2d");
+
+		ctx.beginPath();
+		ctx.fillStyle='blue';
+		ctx.fillRect(0,WATER_LEVEL,1000,200);
+		ctx.stroke();
 	}
 
 	function updateSliderNum(value){
