--- a/procGen2d.html
+++ b/procGen2d.html
@@ -1,5 +1,18 @@
 <html>
 <head>
+<style>
+html,body{
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+canvas{
+	width: 100%;
+	height: 100%;
+}
+</style>
 </head>
 <body>
   <canvas id="map" width="500" height="500" style="position: absolute;"></canvas>
@@ -87,9 +100,19 @@ function draw(){
   for(var x=0; x<cood.length; x++){
     for(var y=0; y<cood.length; y++){
       var height = cood[x][y];
+	  
 	  var color = "rgb("+height+","+height+","+height+")";
-	  if(height <= 100){
+	  if(height <= 100) {
 		color="teal";
+	  }
+	  if(height > 100 && height <= 110) {
+		color = "rgb("+(height*2)+","+(height*2)+","+(height)+")";
+	  }
+	  if(height > 110 && height <= 180) {
+		color = "rgb("+(height/2)+","+height+","+(height/2)+")";
+	  }
+	  if(height > 180 && height <= 220) {
+		color = "rgb("+(height/2)+","+(height/2)+","+(height/2)+")";
 	  }
 	  
       if(cood[x][y] != 0){
