--- a/procGen2d.html
+++ b/procGen2d.html
@@ -47,18 +47,18 @@ function initialize(){
 function generate(minX,maxX,minY,maxY){
 	var midX = Math.floor((maxX+minX) / 2);
 	var midY = Math.floor((maxY+minY) / 2);
-	
+
 	if(minX==midX && minY==midY) return;
 
 	// Square
 	var zAvg = Math.round((cood[minX][minY] + cood[minX][maxY] + cood[maxX][minY] + cood[maxX][maxY]) / 4);
-	
+
 	var maximum = Math.max(cood[minX][minY], cood[minX][maxY], cood[maxX][minY], cood[maxX][maxY]);
 	var minimum = Math.min(cood[minX][minY], cood[minX][maxY], cood[maxX][minY], cood[maxX][maxY]);
 	var zRange = Math.abs(maximum-minimum);
-	
+
 	var deviation = Math.round(Math.random()*zRange);
-	
+
 	cood[midX][midY] = Math.round(zAvg + (deviation - (zRange/2)));
 
 	// Diamond
@@ -83,13 +83,13 @@ function generate(minX,maxX,minY,maxY){
 
 function diamond(lead, tail, middle){
 	var zAvg = Math.round((lead + tail + middle) / 3);
-	
+
 	var maximum = Math.max(lead,tail,middle);
 	var minimum = Math.min(lead,tail,middle);
 	var zRange = Math.abs(maximum-minimum);
-	
+
 	var deviation = Math.round(Math.random()*zRange);
-	
+
 	return Math.round(zAvg + (deviation - (zRange/2)));
 }
 
@@ -100,10 +100,10 @@ function draw(){
   for(var x=0; x<cood.length; x++){
     for(var y=0; y<cood.length; y++){
       var height = cood[x][y];
-	  
+
 	  var color = "rgb("+height+","+height+","+height+")";
 	  if(height <= 100) {
-		color="teal";
+		color= "rgb(0,"+(height)+","+(height)+")";
 	  }
 	  if(height > 100 && height <= 110) {
 		color = "rgb("+(height*2)+","+(height*2)+","+(height)+")";
@@ -114,7 +114,7 @@ function draw(){
 	  if(height > 180 && height <= 220) {
 		color = "rgb("+(height/2)+","+(height/2)+","+(height/2)+")";
 	  }
-	  
+
       if(cood[x][y] != 0){
         ctx.beginPath();
         ctx.fillRect(x,y,1,1);
