--- a/index.html
+++ b/index.html
@@ -4,122 +4,27 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-	<canvas id="landscape" width="1000" height="200" style="position: absolute;"></canvas>
-	<div style='position: absolute; z-index: 100'>
+	<canvas id="landscape" width="1000" height="200"></canvas>
+
+	<div>
 		<div>
-		<label for="randomness">Randomness</label>
-		<input type="range" min="10" max="99" id="randomness" oninput="updateSliderRandomness(value)" value="99"></input>
-		<output for="randomness" id="numRandomness">99</output>
+			<label for="variation">Variation</label>
+			<input type="range" min="1" max="50" id="variation" oninput="updateSliderVariation(value)" value="20"></input>
+			<output for="variation" id="numVariation">10</output>
 		</div>
-		<label for="intensity">Intensity</label>
-		<input type="range" min="1" max="500" id="intensity" oninput="updateSliderIntensity(value)" value="99"></input>
-		<output for="intensity" id="numIntensity">99</output>
+			<label for="intensity">Intensity</label>
+			<input type="range" min="1" max="200" id="intensity" oninput="updateSliderIntensity(value)" value="100"></input>
+			<output for="intensity" id="numIntensity">100</output>
 		<div>
-		<label for="waterLevel">Water Level</label>
-		<input type="range" min="0" max="200" id="waterLevel" oninput="updateSliderWater(value)" value="160"></input>
-		<output for="waterLevel" id="numWater">160</output>
+			<label for="waterLevel">Water Level</label>
+			<input type="range" min="0" max="200" id="waterLevel" oninput="updateSliderWater(value)" value="120"></input>
+			<output for="waterLevel" id="numWater">120</output>
 		</div>
 		<div>
-		<input type="button" value="Generate" onclick="procGen()"></input>
+			<input type="button" value="Generate" onclick="procGen()"></input>
 		</div>
 	</div>
+	
 </body>
-
-<script>
-	var numOfIterations = 10;
-	var randomness = document.getElementById('randomness').value;
-	var intensity = document.getElementById('intensity').value;
-	var waterLevel = 100;
-
-	const X_LENGTH = 200; //randomness
-	const Y_LENGTH = 200; //intensity
-
-	var terrain = new Array();
-
-	var chunk = new Array(X_LENGTH);
-	for(i=0; i<numOfIterations; i++){
-		chunk.fill(0);
-		addChunk();
-	}
-
-	draw();
-
-	function addChunk(){
-		var startPoint = Math.random()*Y_LENGTH;
-		if(terrain.length > 0) {
-			startPoint = terrain[terrain.length-1]
-		}
-		chunk[0] = Math.round(startPoint);
-		chunk[X_LENGTH] = Math.round(Math.random()*Y_LENGTH);
-
-		generate(0, X_LENGTH);
-		terrain = terrain.concat(chunk);
-	}
-
-	function generate(minPoint, maxPoint){
-		var middlePoint = Math.round((minPoint+maxPoint)/2);
-		var pointBetween = Math.round((chunk[minPoint]+chunk[maxPoint])/2);
-		var pointRange = Math.abs(chunk[maxPoint]-chunk[minPoint]);
-
-		if(minPoint == middlePoint) return;
-		if(maxPoint == middlePoint) return;
-
-		var deviation = Math.round(Math.random()*pointRange);
-		chunk[middlePoint] = Math.round(pointBetween + (deviation - (pointRange/2)));
-
-		generate(minPoint, middlePoint);
-		generate(middlePoint, maxPoint);
-	}
-
-	function draw(){
-		var landscape = document.getElementById('landscape');
-		var ctx = landscape.getContext("2d");
-
-		xIncrement = landscape.width / (terrain.length-1);
-		for(var x=0; x<=terrain.length; x++){
-
-			if(terrain[x] < waterLevel){
-				ctx.beginPath();
-				ctx.moveTo(x, terrain[x]-5);
-				ctx.lineTo(x, terrain[x]+0);
-				ctx.strokeStyle="forestgreen";
-
-				ctx.stroke();
-				ctx.beginPath();
-				ctx.moveTo(x, terrain[x]+0);
-				ctx.lineTo(x, terrain[x]+20);
-				ctx.strokeStyle="brown";
-				ctx.stroke();
-			} else {
-				ctx.beginPath();
-				ctx.moveTo(x, waterLevel);
-				ctx.lineTo(x, terrain[x]+0);
-				ctx.strokeStyle="teal";
-				ctx.stroke();
-
-				ctx.beginPath();
-				ctx.moveTo(x, terrain[x]+0);
-				ctx.lineTo(x, terrain[x]+20);
-				ctx.strokeStyle="tan";
-				ctx.stroke();
-			}
-
-			ctx.beginPath();
-			ctx.moveTo(x, terrain[x]+20);
-			ctx.lineTo(x, 500);
-			ctx.strokeStyle="grey";
-			ctx.stroke();
-		}
-	}
-
-	function updateSliderIntensity(value){
-		document.querySelector('#numIntensity').value = value;
-	}
-	function updateSliderRandomness(value){
-		document.querySelector('#numRandomness').value = value;
-	}
-	function updateSliderWater(value){
-		document.querySelector('#numWater').value = value;
-	}
-</script>
+<script src='generator.js'></script>
 </html>
