--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<link rel="icon" type="img/ico" href="favicon.ico">
 </head>
 <body>
 	<canvas id="sky" width="1000" height="500"></canvas>
